<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FlickrViewer</string>
    <string name="action_refresh">Refresh</string>
    <string name="header_main">Recent Flickr Photos</string>
    <string name="header_explain1">View the most recent photos that Flickr</string>
    <string name="header_explain2">users have uploaded.</string>
    <string name="image_title">Flickr Image</string>

    <string name="accept">Accept</string>
    <string name="decline">Continue</string>
    <string name="onWeb">View on Flickr</string>

</resources>
