<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:gravity="center">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/header_main"
            android:textColor="@android:color/holo_blue_dark"
            android:id="@+id/textView" android:layout_gravity="center_horizontal" android:textStyle="bold"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/header_explain1"
            android:textColor="@android:color/holo_red_light"
            android:id="@+id/textView2" android:layout_gravity="center_horizontal"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/holo_red_light"
            android:text="@string/header_explain2"
            android:id="@+id/textView3" android:layout_gravity="center_horizontal"/>
</LinearLayout>