<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:id="@+id/intent_username" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"
            android:textStyle="bold" android:textColor="@android:color/holo_blue_dark" android:layout_margin="10dp"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/large_image"
            android:src="@drawable/ic_launcher"
            android:contentDescription="@string/image_title"
            android:layout_below="@+id/intent_username" android:layout_centerHorizontal="true" android:layout_margin="20dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_main"
            android:id="@+id/intent_title" android:layout_below="@+id/large_image" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" android:layout_margin="20dp"/>
    <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rating_bar" android:layout_below="@+id/intent_title" android:layout_centerHorizontal="true"
            android:layout_margin="20dp"/>
</RelativeLayout>